# swe-virtual-lab

./: .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: deploy.yaml  every_push.yaml  run_tests.yaml
apps/server/: config.py  models.py  pyproject.toml
apps/server/db_manage/: db.py  seeder.py
seeder/: __main__.py
server/: pyproject.toml
server/db_manage/: db_models.py
server/src/server/: config.py  main.py  middlewares.py  state.py
server/src/server/auth/: jwt.py  routes.py
server/src/server/authentication/: schemas.py  utils.py
server/src/server/db/: __init__.py  models.py  utils.py
server/src/server/quizes/: routes.py
server/src/server/routes/auth/: jwt.py  routes.py
server/src/server/routes/quizes/: routes.py
server/src/server/routes/users/: routes.py
src/server/: config.py  main.py  middlewares.py
src/server/authentication/: utils.py
src/server/config/: __init__.py  local.py  real.py
src/server/routes/auth/: routes.py  schemas.py
src/server/routes/platform_stats/: routes.py  schemas.py  services.py
src/server/routes/quizes/: routes.py  schemas.py  services.py
src/server/routes/students/: routes.py  schemas.py  services.py
src/server/routes/users/: routes.py  schemas.py  services.py
tests/: settings.py  test_authentication_middleware.py  test_jwt_token.py  test_process_header.py
